<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

  <ListView android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  <LinearLayout android:id="@android:id/empty"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <Button android:id="@+id/buyLicense"
            style="@style/main_buttons"
            android:visibility="gone"
            android:text="@string/purchase_license"/>
    <Button android:id="@+id/Profile1"
            style="@style/main_buttons"
            android:text="@string/Profile1"/>
    <Button android:id="@+id/Profile2"
            style="@style/main_buttons"
            android:text="@string/Profile2"/>
    <Button android:id="@+id/Profile3"
            style="@style/main_buttons"
            android:text="@string/Profile3"/>
    <Button android:id="@+id/Profile4"
            style="@style/main_buttons"
            android:text="@string/Profile4"/>
    <Button android:id="@+id/Profile5"
            style="@style/main_buttons"
            android:text="@string/Profile5"/>
    <Button android:id="@+id/Profile6"
            style="@style/main_buttons"
            android:text="@string/Profile6"/>
    <Button android:id="@+id/Profile7"
            style="@style/main_buttons"
            android:text="@string/Profile7"/>
    <Button android:id="@+id/Profile8"
            style="@style/main_buttons"
            android:text="@string/Profile8"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
